[package]
name = "mina-logs-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-ctrlc = "1.2.0"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tempfile = "3.3.0"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["formatting", "parsing"] }
tokio = { version = "1.25.0", features = ["test-util", "tokio-macros", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tokio-tar = "0.3.0"
warp = "0.3.3"

[dev-dependencies]
reqwest = "0.11.14"
tempdir = "0.3.7"

[net]
git-fetch-with-cli = true
